@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<settings version="1">
+	<section id="plugin.video.drnu">
+		<category id="general_settings" label="30500">
+			<group id="1" label="">
+				<setting id="inputstream" label="30521" type="integer">
+				<level>2</level>
+				<default>0</default>
+				<constraints>
+					<options>
+					<option label="adaptive">0</option>
+					<option label="ffmpegdirect">1</option>
+					</options>
+				</constraints>
+				<control type="spinner" format="string"/>
+				</setting>
+			</group>
+		</category>
+	</section>
+</settings>
